<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.kdg.teamd.beatbuddy.activities.LoginActivity">

    <ImageView
        android:id="@+id/login_header_image"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/login_header_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header_image"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_intro"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header_intro"
        android:layout_marginTop="32dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_login_email"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/login_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_login_password"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="Remember me" />

    <LinearLayout
        android:id="@+id/login_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_remember"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/gplus_button"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_margin="3dp"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/btn_register"
            style="@style/MaterialButtonWhite"
            android:layout_width="100dp"
            android:layout_height="42dp"
            android:layout_margin="3dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/btn_login"
            style="@style/MaterialButtonBlack"
            android:layout_width="100dp"
            android:layout_height="46dp"
            android:layout_margin="3dp"
            android:text="@string/login" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/ic_login_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>
