<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.kdg.teamd.beatbuddy.activities.LoginActivity">

    <ImageView
        android:id="@+id/register_header_image"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/login_header_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_header_image"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_intro"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_register_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_header_intro"
        android:layout_marginTop="24dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_firstname"
        android:layout_marginTop="6dp"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_lastname"
        android:layout_marginTop="6dp"
        android:hint="Nickname"
        android:inputType="text"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_nickname"
        android:layout_marginTop="6dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_email"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_register"
        style="@style/MaterialButtonWhite"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/edit_register_password"
        android:layout_marginTop="24dp"
        android:text="@string/register" />

    <ProgressBar
        android:id="@+id/ic_register_loading"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_register"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="-6dp"
        android:layout_toStartOf="@+id/btn_register"
        android:indeterminate="true" />

</RelativeLayout>
